# personal-email-forwarder

./: .gitignore  Pipfile  README.md  event.json  forward_email.py  lambda.py  mail.py  pyproject.toml  tests.py
tests/: sns_message_from_ses.json
